added new demo video

--- a/demo.html
+++ b/demo.html
@@ -499,10 +499,10 @@
         <!-- LEFT: VIDEO -->
         <div class="demo-left">
           <div class="card demo-video-wrapper">
-            <div class="chip">🎥 Demo video</div>
+            <div class="chip">🎥 Demo Video</div>
             <video controls>
               <!-- SHU YERGA O'Z VIDEO MANZILINGIZNI QO'YASIZ -->
-              masalan: <source src="mobile-app.mp4" type="video/mp4" />
+              masalan: <source src="demo.mp4" type="video/mp4" />
               Sizning brauzeringiz video tagini qo‘llab-quvvatlamaydi.
             </video>
           </div>
