--- a/demo.html
+++ b/demo.html
@@ -527,7 +527,7 @@
 
     <!-- QOLGAN NARSA: API misoli va loyiha tavsifi pastda -->
     <section id="api-doc">
-      <h2>API misoli: AI-powered endpoint</h2>
+      <h2>API misoli: AI-Powered Endpoint</h2>
       <div class="flex">
         <div class="card" style="flex:1 1 300px;">
           <h3>Endpoint namunasi</h3>
