--- a/demo.html
+++ b/demo.html
@@ -498,13 +498,24 @@
 
         <!-- LEFT: VIDEO -->
         <div class="demo-left">
-          <div class="card demo-video-wrapper">
-            <div class="chip">🎥 Demo Video</div>
-            <video controls>
-              <!-- SHU YERGA O'Z VIDEO MANZILINGIZNI QO'YASIZ -->
-              masalan: <source src="demo.mp4" type="video/mp4" />
-              Sizning brauzeringiz video tagini qo‘llab-quvvatlamaydi.
-            </video>
+          <div class="card demo-video-wrapper" style="display: flex; flex-direction: column; align-items: center;">
+            <div>
+              <div class="chip">🎥 Demo Video</div>
+              <video controls>
+                <!-- SHU YERGA O'Z VIDEO MANZILINGIZNI QO'YASIZ -->
+                masalan: <source src="demo.mp4" type="video/mp4" />
+                Sizning brauzeringiz video tagini qo‘llab-quvvatlamaydi.
+              </video>
+            </div>
+
+            <div class="flex center" style="margin-top:28px;gap:14px;flex-wrap:wrap;">
+              <button class="btn" id="heroStartBtn" aria-label="Boshlash — GROW ilovasini ishga tushirish">
+                <a href="https://www.figma.com/make/YYWLnaCBnOev3xsz6BMHvv/EcoReport-Mobile-App-UI?t=4UK9xn8InteWRA5K-20&fullscreen=1" style="color:var(--text-muted); text-decoration:none;">Mobile App UI</a>
+              </button>
+              <button class="btn" id="heroStartBtn" aria-label="Boshlash — GROW ilovasini ishga tushirish">
+                <a href="https://www.figma.com/make/XMNQi4uCZNElagVdcBqdJq/EcoReport-Dashboard-Design?t=05YSezA4RX7tvwCt-20&fullscreen=1" style="color:var(--text-muted); text-decoration:none;">Dashboard UI</a>
+              </button>
+            </div>
           </div>
 
           <div class="card" style="margin-top:16px;">
