added target blank

--- a/demo.html
+++ b/demo.html
@@ -496,7 +496,7 @@
 
       <div class="flex" style="margin-top:26px;align-items:flex-start;">
 
-        <!-- LEFT: VIDEO -->
+        <!-- LEFT: VIDEO -->  
         <div class="demo-left">
           <div class="card demo-video-wrapper" style="display: flex; flex-direction: column; align-items: center;">
             <div>
@@ -510,10 +510,10 @@
 
             <div class="flex center" style="margin-top:28px;gap:14px;flex-wrap:wrap;">
               <button class="btn" id="heroStartBtn" aria-label="Boshlash — GROW ilovasini ishga tushirish">
-                <a href="https://www.figma.com/make/YYWLnaCBnOev3xsz6BMHvv/EcoReport-Mobile-App-UI?t=4UK9xn8InteWRA5K-20&fullscreen=1" style="color:var(--text-muted); text-decoration:none;">Mobile App UI</a>
+                <a href="https://www.figma.com/make/YYWLnaCBnOev3xsz6BMHvv/EcoReport-Mobile-App-UI?t=4UK9xn8InteWRA5K-20&fullscreen=1" target="_blank" style="color:var(--text-muted); text-decoration:none;">Mobile App UI</a>
               </button>
               <button class="btn" id="heroStartBtn" aria-label="Boshlash — GROW ilovasini ishga tushirish">
-                <a href="https://www.figma.com/make/XMNQi4uCZNElagVdcBqdJq/EcoReport-Dashboard-Design?t=05YSezA4RX7tvwCt-20&fullscreen=1" style="color:var(--text-muted); text-decoration:none;">Dashboard UI</a>
+                <a href="https://www.figma.com/make/XMNQi4uCZNElagVdcBqdJq/EcoReport-Dashboard-Design?t=05YSezA4RX7tvwCt-20&fullscreen=1" target="_blank" style="color:var(--text-muted); text-decoration:none;">Dashboard UI</a>
               </button>
             </div>
           </div>
