--- a/index.html
+++ b/index.html
@@ -600,6 +600,14 @@
   outline-offset: 3px;
 }
 
+@media (max-width: 1024px) {
+  .slide-orqali-jarayon,
+  #flow-next,
+  #flow-prev {
+    display: none;
+  }
+}
+
     
 
   </style>
@@ -740,7 +748,7 @@
             <button class="flow-tab btn secondary" data-mode="authority" aria-pressed="false"
               style="color:var(--text-muted);border:1px solid rgba(255,255,255,0.06)">Idora
               (Dashboard)</button>
-            <div style="margin-left:auto;color:var(--text-muted);font-size:0.95rem">Slide orqali jarayonni ko'ring</div>
+            <div class="slide-orqali-jarayon" style="margin-left:auto;color:var(--text-muted);font-size:0.95rem">Slide orqali jarayonni ko'ring</div>
           </div>
 
           <!-- Carousel wrapper -->
